@@ -140,6 +140,8 @@ sub clean_edition_number {
 	# Extended.
 	$re = decode_utf8('přeprac');
 	$ret_edition_number =~ s/\s*$re\.//ms;
+	$re = decode_utf8('nezměn');
+	$ret_edition_number =~ s/\s*$re\.//ms;
 	$re = decode_utf8('přepracované');
 	$ret_edition_number =~ s/\s*$re//ms;
 	$ret_edition_number =~ s/\s*aktualiz\.//ms;
