@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_edition_number);
-use Test::More 'tests' => 49;
+use Test::More 'tests' => 50;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -242,5 +242,10 @@ is($ret, 3, encode_utf8("Edition number '$input_edition_number' after cleanup.")
 
 # Test.
 $input_edition_number = decode_utf8('2. oprav. a dopl. vyd.');
+$ret = clean_edition_number($input_edition_number);
+is($ret, 2, encode_utf8("Edition number '$input_edition_number' after cleanup."));
+
+# Test.
+$input_edition_number = decode_utf8('2., nezměn. vyd.');
 $ret = clean_edition_number($input_edition_number);
 is($ret, 2, encode_utf8("Edition number '$input_edition_number' after cleanup."));
