@@ -1,4 +1,5 @@
 0.17
+ - Add another edition number cleanup use case.
 
 0.16 2024-09-19T10:23:56+02:00
  - Add support for new use case of number of pages.
